breadcrumbs layout bug fixes

--- a/wisehands/admin/css/admin.css
+++ b/wisehands/admin/css/admin.css
@@ -2466,6 +2466,7 @@ ul.admin-breadcrumb li a:hover {
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
+	margin-bottom: 2rem;
 }
 
 .qr-download-text {
